Update categories in Cargo.toml to reflect a more accurate classification of the project, replacing 'template' with 'api-bindings'.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Production-grade Rust SaaS boilerplate - A complete starter templ
 license = "MIT"
 repository = "https://github.com/HardikKSavaliya/rust-saas-backend"
 keywords = ["saas", "boilerplate", "starter", "template", "backend"]
-categories = ["web-programming", "authentication", "template"]
+categories = ["web-programming", "authentication", "api-bindings"]
 
 [lib]
 name = "rust_saas_boilerplate"
